// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_large__1s3oplf4"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_large__1s3oplf4"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_large__1s3oplf4"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_large__1s3oplf4"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_large__1s3oplf4"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_small__1s3oplf6"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_small__1s3oplf6"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_small__1s3oplf6"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_small__1s3oplf6"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_small__1s3oplf6"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_xsmall__1s3oplf7"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_xsmall__1s3oplf7"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_xsmall__1s3oplf7"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_xsmall__1s3oplf7"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_xsmall__1s3oplf7"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionSmallStrong__1do42lsr style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 10.638297872340425%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 22.340425531914892%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 100%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-1"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Hello
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with hovering legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 100%;"
          >
            <div
              class="styles__1y5sygv5"
            >
              <div
                class="styles__1y5sygv5"
                tabindex="0"
              >
                <div
                  class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                    style="--whiteSpace__1giziax1: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-1"
        >
          <span
            class="styles__1s3oplfb styles_child_0__1s3oplfc"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Hello
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            label
          </label>
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            label information
          </span>
        </div>
        <div
          class="classname styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with legend outside 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              class="styles__1y5sygv5"
            >
              <div
                class="styles__1y5sygv5"
                tabindex="0"
              >
                <div
                  class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                  data-testid="content-1"
                >
                  <span
                    class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                    style="--whiteSpace__1giziax1: nowrap;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-3"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-4"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-5"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-1"
        >
          <span
            class="styles__1s3oplfb styles_child_0__1s3oplfc"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Hello
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-2"
        >
          <span
            class="styles__1s3oplfb styles_child_1__1s3oplfd"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          />
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-3"
        >
          <span
            class="styles__1s3oplfb styles_child_2__1s3oplfe"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Encore
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-4"
        >
          <span
            class="styles__1s3oplfb styles_child_3__1s3oplff"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Next
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          data-testid="legend-5"
        >
          <span
            class="styles__1s3oplfb styles_child_4__1s3oplfg"
          />
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Bye bye
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.125rem_xxsmall__toi52u5d"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <div
          class="styles__1s3oplf9"
        >
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 2%;"
          >
            <div
              class="styles__1y5sygv5"
              tabindex="0"
            >
              <div
                class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
                data-testid="content-1"
              >
                <span
                  class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                  style="--whiteSpace__1giziax1: nowrap;"
                >
                  Hello
                </span>
              </div>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-2"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              />
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-3"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Encore
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-4"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Next
              </span>
            </div>
          </div>
          <div
            class="styles__1s3oplf1"
            style="--_1s3oplf0: 4.2%;"
          >
            <div
              class="styles__1s3oplf2 styles_size_medium__1s3oplf5"
              data-testid="content-5"
            >
              <span
                class="styles__1s3oplf8 style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
                style="--whiteSpace__1giziax1: nowrap;"
              >
                Bye bye
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
